syntax = "proto3";
package proto.common;

// commands
// S -> C : even
// C -> S : odd
enum Cmd {
    RESERVED = 0;
    HEART_BEAT_REQ = 0x1;
    HEART_BEAT_RSP = 0x2;
    LOGIN_REQ = 0x11;
    LOGIN_RSP = 0x12;
    GET_SEED_REQ = 0x31;
    GET_SEED_RSP = 0x32;
    PING_REQ = 0x1001;
    PING_RSP = 0x1002;

    CMD_COMMON_END = 0x10000;
}

enum ResultCode {
    RESULT_OK = 0;
    RESULT_TIMEOUT = 1;
    RESULT_UNAUTH = 2;
    RESULT_UNKNOWN_CMD = 3;
    RESULT_INTERNAL_ERROR = 4;
}

message RspHeader {
    ResultCode status = 1;
    fixed64 timestamp = 2;
    string msg = 3;
}
