syntax = "proto3";

package proto;

import "common.proto";

// Database service definition
service DBService { rpc QueryUser(DB.UserKey) returns (DB.UserQueryResult); }

message DB {
    message UserKey {
        fixed64 usn   = 1;
        uint64  uid   = 2;
        string  email = 3;
    }
    message UserQueryResult {
        proto.common.ResultCode    status = 1;
        proto.common.UserBasicInfo info   = 2;
    }
}
